feat: overall clean up
- add slogans
- add a why page
- uniformed formatting
- clean up founders

--- a/about.html
+++ b/about.html
@@ -15,16 +15,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Learn more about Tapestral’s mission, vision, and the team building a better way for interior designers to source products directly from trusted vendors.">
-    <meta name="keywords" content="About Tapestral, interior design platform, design sourcing, our mission, design startup">
+    <meta name="description"
+        content="Learn more about Tapestral’s mission, vision, and the team building a better way for interior designers to source products directly from trusted vendors.">
+    <meta name="keywords"
+        content="About Tapestral, interior design platform, design sourcing, our mission, design startup">
     <meta name="author" content="Tapestral">
     <meta name="robots" content="all">
     <link rel="canonical" href="https://tapestral.com/about.html">
+    <link rel="icon" href="https://www.tapestral.com/images/favicon.ico">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="About Us – Tapestral">
-    <meta property="og:description" content="We’re building a better sourcing experience for interior designers. Get to know our vision and values.">
+    <meta property="og:description"
+        content="We’re building a better sourcing experience for interior designers. Get to know our vision and values.">
     <meta property="og:url" content="https://tapestral.com/about.html">
     <meta property="og:image" content="https://tapestral.com/images/tapestral_header.png">
 
@@ -83,15 +87,38 @@
             align-items: center;
             padding: 2rem;
             color: white;
+            text-align: center;
+        }
+
+        .hero-center {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            flex-grow: 1;
         }
 
         .hero-title {
             font-family: 'Playfair Display', serif;
             font-size: 4rem;
             font-weight: bold;
-            margin: auto 0;
+            margin-bottom: 0.5rem;
             text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
             color: #f1f1f1;
+        }
+
+        .hero-subtitle {
+            font-size: 1.5rem;
+            font-weight: 400;
+            margin: 0;
+            color: #f5f5f5;
+            text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.5);
+            max-width: 800px;
+        }
+
+        .hero-title a {
+            color: inherit;
+            text-decoration: none;
         }
 
         .hero-title a {
@@ -391,11 +418,15 @@
     <div class="site-wrapper">
         <div class="hero-header">
             <div class="hero-overlay">
-                <h1 class="hero-title"><a href="index.html">Tapestral</a></h1>
+                <div class="hero-center">
+                    <h1 class="hero-title"><a href="index.html">Tapestral</a></h1>
+                    <h2 class="hero-subtitle">Simplifying sourcing. Amplifying creativity.</h2>
+                </div>
 
                 <!-- Desktop Nav -->
                 <nav class="hero-nav">
                     <a href="about.html">About Us</a>
+                    <a href="why-tapestral.html">Why Tapestral</a>
                     <a href="designer-access.html">Designer access</a>
                     <a href="become-a-vendor.html">Become a Vendor</a>
                     <a href="terms-of-service.html">Terms of Service</a>
@@ -409,6 +440,7 @@
                 </button>
                 <nav id="mobileNav" class="mobile-nav">
                     <a href="about.html">About Us</a>
+                    <a href="why-tapestral.html">Why Tapestral</a>
                     <a href="designer-access.html">Designer access</a>
                     <a href="become-a-vendor.html">Become a Vendor</a>
                     <a href="terms-of-service.html">Terms of Service</a>
@@ -419,7 +451,6 @@
         <!-- About Page Content -->
         <section class="about-hero">
             <h2 class="about-title">About Tapestral</h2>
-            <p class="about-tagline">Elevating design. Simplifying sourcing.</p>
         </section>
 
         <section class="about-content">
@@ -446,21 +477,26 @@
                         <h3>Kenny Goodin</h3>
                         <p class="founder-title">Chief Technology Officer</p>
                         <p>
-                            With a decade of experience in software engineering, Kenny specializes in developing
-                            high-performance systems
-                            and scalable platforms. From real-time applications to infrastructure design, his focus
-                            ensures Tapestral runs fast,
-                            reliably, and securely.
+                            Combining a background in software engineering, scalable systems, and infrastructure design,
+                            Kenny brings deep technical expertise and hands-on experience building high-performance
+                            platforms.
+                        </p>
+                        <p>
+                            His focus ensures Tapestral delivers fast, reliable, and secure technology that supports
+                            designers and vendors seamlessly.
                         </p>
                     </div>
                     <div class="founder-card">
                         <h3>Dylan LaMott</h3>
                         <p class="founder-title">Chief Strategy Officer</p>
                         <p>
-                            Combining a background in cybersecurity and logistics, Dylan brings operational expertise
-                            and deep industry insight
-                            from years working with vendors and scaling supply chains. He ensures Tapestral is built to
-                            serve real business to business needs.
+                            Combining a background in software engineering, cybersecurity, and logistics, Dylan brings
+                            operational expertise and deep industry insight on working with vendors and scaling supply
+                            chains.
+                        </p>
+                        <p>
+                            His focus ensures Tapestral delivers secure, efficient, and technically robust solutions
+                            while streamlining operations for designers and vendors.
                         </p>
                     </div>
                 </div>
@@ -480,6 +516,7 @@
             <div class="footer-content">
                 <div class="footer-links">
                     <a href="about.html">About Us</a>
+                    <a href="why-tapestral.html">Why Tapestral</a>
                     <a href="designer-access.html">Designer access</a>
                     <a href="become-a-vendor.html">Become a Vendor</a>
                     <a href="terms-of-service.html">Terms of Service</a>
