--- a/why-tapestral.html
+++ b/why-tapestral.html
@@ -10,33 +10,34 @@
         gtag('js', new Date());
         gtag('config', 'G-4TVK733BFR');
     </script>
-    <title>Become a Vendor – Tapestral</title>
+
+    <title>Why Tapestral – Tapestral</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description"
-        content="Apply to become a vendor on Tapestral and sell directly to interior designers. Gain visibility and streamline your sales process.">
+        content="Why Tapestral: a platform built for the furniture industry. Connecting interior designers with trusted vendors seamlessly, with fast browsing, real-time updates, and smooth ordering.">
     <meta name="keywords"
-        content="become a vendor, Tapestral vendor application, sell to interior designers, design marketplace, vendor sign up">
+        content="Why Tapestral, interior design platform, B2B furniture sourcing, designer tools, vendor network, furniture e-commerce">
     <meta name="author" content="Tapestral">
     <meta name="robots" content="all">
-    <link rel="canonical" href="https://tapestral.com/become-a-vendor.html">
+    <link rel="canonical" href="https://tapestral.com/why-tapestral.html">
     <link rel="icon" href="https://www.tapestral.com/images/favicon.ico">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Become a Vendor – Tapestral">
+    <meta property="og:title" content="Why Tapestral – Tapestral">
     <meta property="og:description"
-        content="Join Tapestral as a vendor and source products to professional interior designers.">
-    <meta property="og:url" content="https://tapestral.com/become-a-vendor.html">
-    <meta property="og:image" content="https://tapestral.com/images/tapestral_header.png">
+        content="Tapestral connects designers with vendors in the furniture industry, providing a faster, clearer, and more reliable sourcing and ordering experience.">
+    <meta property="og:url" content="https://tapestral.com/why-tapestral.html">
+    <meta property="og:image" content="https://www.tapestral.com/images/tapestral_header.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Become a Vendor – Tapestral">
-    <meta name="twitter:description" content="Join Tapestral as a vendor and source products to professional interior designers.">
-    <meta name="twitter:image" content="https://tapestral.com/images/tapestral_header.png">
-
+    <meta name="twitter:title" content="Why Tapestral – Tapestral">
+    <meta name="twitter:description"
+        content="Purchase from vendors, browse furniture catalogs, and place orders seamlessly on Tapestral — built for interior designers.">
+    <meta name="twitter:image" content="https://www.tapestral.com/images/tapestral_header.png">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -116,13 +117,12 @@
             max-width: 800px;
         }
 
-
         .hero-title a {
             color: inherit;
             text-decoration: none;
         }
 
-        /* Desktop Nav */
+
         .hero-nav {
             display: flex;
             gap: 2rem;
@@ -242,27 +242,20 @@
             }
         }
 
-        /* Form Section */
-        main {
-            max-width: 900px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-        }
-
-        .network-hero {
+        .why-hero {
             padding: 80px 20px;
             text-align: center;
             position: relative;
         }
 
-        .network-hero::before {
+        .why-hero::before {
             content: '';
             position: absolute;
             inset: 0;
             z-index: 1;
         }
 
-        .network-title {
+        .why-title {
             position: relative;
             z-index: 2;
             font-family: 'Playfair Display', serif;
@@ -270,14 +263,24 @@
             margin-bottom: 12px;
         }
 
-        h2 {
-            font-size: 24px;
+        .content {
+            max-width: 1000px;
+            margin: 60px auto;
+            padding: 0 16px;
+        }
+
+        .content h2 {
+            font-size: 28px;
             margin-top: 40px;
             margin-bottom: 12px;
-            font-weight: 600;
             color: #222;
         }
 
+        .content p {
+            font-size: 16px;
+            line-height: 1.6;
+            color: #444;
+        }
 
         .highlight-box {
             background: #fafafa;
@@ -301,21 +304,6 @@
         .highlight-box ul li {
             margin-bottom: 10px;
             color: #555;
-        }
-
-        .form-wrapper {
-            position: relative;
-            width: 100%;
-            min-height: 1600px;
-            /* ensures form is fully visible */
-        }
-
-        .form-wrapper iframe {
-            width: 100%;
-            height: 100%;
-            min-height: 1600px;
-            border: none;
-            display: block;
         }
 
         /* Footer */
@@ -363,12 +351,14 @@
 
 <body>
     <div class="site-wrapper">
+        <!-- Hero Section -->
         <div class="hero-header">
             <div class="hero-overlay">
                 <div class="hero-center">
                     <h1 class="hero-title"><a href="index.html">Tapestral</a></h1>
-                    <h2 class="hero-subtitle">Your products, spotlighted.</h2>
+                    <h2 class="hero-subtitle">Built to connect. Designed to perform.</h2>
                 </div>
+
 
                 <!-- Desktop Nav -->
                 <nav class="hero-nav">
@@ -395,38 +385,76 @@
             </div>
         </div>
 
-        <section class="network-hero">
-            <h2 class="network-title">Network with Tapestral</h2>
+        <section class="why-hero">
+            <h2 class="why-title">Why Tapestral</h2>
         </section>
-        <main>
-            <h2>For Vendors</h2>
+
+        <!-- Main Content -->
+        <section class="content">
+            <h2>For Designers</h2>
             <p>
-                Tapestral bridges the gap from trusted vendors to interior designers seamlessly.
-                Reach out to showcase your catalog and gain access to a growing network of design professionals.
+                Designers need speed, clarity, and confidence when sourcing furniture.
+                Tapestral provides a single destination to explore curated vendor catalogs,
+                check availability, and place orders without the usual back-and-forth.
+                From browsing products to receiving deliveries, every step is handled so you can
+                focus on your project, not the paperwork.
             </p>
 
             <div class="highlight-box">
-                <h3>Why Network With Tapestral</h3>
+                <h3>What Designers Get</h3>
                 <ul>
-                    <li>Reach new designers without running another storefront.</li>
-                    <li>Secure and fast payment processing directly to your account.</li>
-                    <li>Focus on fulfillment while we manage the platform experience.</li>
-                    <li>Simplified product hosting — we handle presentation, orders, and updates.</li>
+                    <li>Instant access to trusted vendor products</li>
+                    <li>Real-time inventory and lead-time visibility</li>
+                    <li>Order tracking, acknowledgements, and documentation in one place</li>
                 </ul>
             </div>
 
+            <h2>How Vendors Benefit</h2>
             <p>
-                Submit the below form today to see how we can simplify how designers access your products.
+                Vendors don’t have to run another storefront or manage new systems.
+                Instead, they provide their product catalog to Tapestral, and we handle everything else.
+                From presenting products to designers, to processing payments, to communicating order updates —
+                we ensure vendors can focus on fulfillment while gaining access to a growing network of designers.
             </p>
 
-            <div class="form-wrapper">
-                <iframe
-                    src="https://docs.google.com/forms/d/e/1FAIpQLSftqDHMI22vQBs5mDO_Cn0ZMSXQ2jmvJh_21pvU1S0vlLGAlQ/viewform?embedded=true"
-                    frameborder="0" marginheight="0" marginwidth="0" loading="lazy">
-                    Loading…
-                </iframe>
+            <div class="highlight-box">
+                <h3>What We Handle for Vendors</h3>
+                <ul>
+                    <li>Importing vendor product data into Tapestral</li>
+                    <li>Showcasing products directly to designers</li>
+                    <li>Sending order details to both designer and vendor</li>
+                    <li>Receiving and recording vendor order acknowledgements</li>
+                </ul>
             </div>
-        </main>
+
+            <h2>Our Role</h2>
+            <p>
+                Tapestral sits in the middle — connecting designers who need reliable sourcing with vendors who
+                want to reach them. We operate the platform, manage the technology, and ensure both sides
+                experience a smoother, faster process. Designers see clarity. Vendors see sales.
+                We handle the complexity in between.
+            </p>
+
+            <div class="highlight-box">
+                <h3>What Powers It All</h3>
+                <ul>
+                    <li>Purpose-built platform — not a template or site builder</li>
+                    <li>Fast, scalable infrastructure for smooth browsing and ordering</li>
+                    <li>Real-time updates on inventory, lead times, and order statuses</li>
+                    <li>End-to-end encryption and secure payment processing</li>
+                    <li>Automated order pipelines to reduce delays and errors</li>
+                </ul>
+            </div>
+
+            <h2>Why It Matters</h2>
+            <p>
+                Designers gain a simpler way to source and order. Vendors gain a direct path to sales without added
+                overhead. And because Tapestral manages the process, both sides benefit from faster projects, fewer
+                mistakes, and
+                a platform built specifically for the furniture industry.
+            </p>
+        </section>
+
 
         <footer class="footer">
             <div class="footer-content">
@@ -442,7 +470,6 @@
                 </div>
             </div>
         </footer>
-
     </div>
     <script>
         // Year auto-update
