--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -21,6 +21,7 @@
   <meta name="author" content="Tapestral">
   <meta name="robots" content="all">
   <link rel="canonical" href="https://tapestral.com/terms-of-service.html">
+  <link rel="icon" href="https://www.tapestral.com/images/favicon.ico">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -74,28 +75,46 @@
       z-index: 1;
     }
 
-    .hero-overlay {
-      position: relative;
-      z-index: 2;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      /* title in center, nav bottom */
-      align-items: center;
-      padding: 2rem;
-      color: white;
-    }
+        .hero-overlay {
+            position: relative;
+            z-index: 2;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            padding: 2rem;
+            color: white;
+            text-align: center;
+        }
 
-    .hero-title {
-      font-family: 'Playfair Display', serif;
-      font-size: 4rem;
-      font-weight: bold;
-      margin: auto 0;
-      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
-      color: #f1f1f1;
-    }
+        .hero-center {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            flex-grow: 1;
+        }
+
+        .hero-title {
+            font-family: 'Playfair Display', serif;
+            font-size: 4rem;
+            font-weight: bold;
+            margin-bottom: 0.5rem;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
+            color: #f1f1f1;
+        }
+
+        .hero-subtitle {
+            font-size: 1.5rem;
+            font-weight: 400;
+            margin: 0;
+            color: #f5f5f5;
+            text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.5);
+            max-width: 800px;
+        }
+
 
     .hero-title a {
       color: inherit;
@@ -357,11 +376,15 @@
 <body>
   <div class="hero-header">
     <div class="hero-overlay">
-      <h1 class="hero-title"><a href="index.html">Tapestral</a></h1>
+      <div class="hero-center">
+        <h1 class="hero-title"><a href="index.html">Tapestral</a></h1>
+        <h2 class="hero-subtitle">Inspiring creativity. Enabling craft.</h2>
+      </div>
 
       <!-- Desktop Nav -->
       <nav class="hero-nav">
         <a href="about.html">About Us</a>
+        <a href="why-tapestral.html">Why Tapestral</a>
         <a href="designer-access.html">Designer access</a>
         <a href="become-a-vendor.html">Become a Vendor</a>
         <a href="terms-of-service.html">Terms of Service</a>
@@ -375,6 +398,7 @@
       </button>
       <nav id="mobileNav" class="mobile-nav">
         <a href="about.html">About Us</a>
+        <a href="why-tapestral.html">Why Tapestral</a>
         <a href="designer-access.html">Designer access</a>
         <a href="become-a-vendor.html">Become a Vendor</a>
         <a href="terms-of-service.html">Terms of Service</a>
@@ -487,6 +511,7 @@
     <div class="footer-content">
       <div class="footer-links">
         <a href="about.html">About Us</a>
+        <a href="why-tapestral.html">Why Tapestral</a>
         <a href="designer-access.html">Designer access</a>
         <a href="become-a-vendor.html">Become a Vendor</a>
         <a href="terms-of-service.html">Terms of Service</a>
