feat: oh yeah its all coming together

--- a/become-a-vendor.html
+++ b/become-a-vendor.html
@@ -399,7 +399,7 @@
             <h2 class="network-title">Network with Tapestral</h2>
         </section>
         <main>
-            <h2>For Vendors</h2>
+            <h2>Showcase Effortlessly</h2>
             <p>
                 Tapestral bridges the gap from trusted vendors to interior designers seamlessly.
                 Reach out to showcase your catalog and gain access to a growing network of design professionals.
