--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                         <p>We make payments easy with ACH processing — no hidden charges or extra costs.</p>
                     </div>
                     <div class="feature-card">
-                        <h3>Direct Access to Vendors</h3>
+                        <h3>Trusted Vendors</h3>
                         <p>Purchase pieces from trusted vendors directly, ensuring quality and transparency.</p>
                     </div>
                     <div class="feature-card">
@@ -438,7 +438,7 @@
             <section class="cta-section">
                 <h2>Are you a Designer?</h2>
                 <p>Request to be notified when Tapestral is officaly launched!</p>
-                <a href="designer-access.html" class="cta-button">Request Access</a>
+                <a href="designer-access.html" class="cta-button">Stay Informed</a>
             </section>
 
             <section class="cta-section">
