--- a/why-tapestral.html
+++ b/why-tapestral.html
@@ -306,6 +306,29 @@
             color: #555;
         }
 
+
+                /* CTA Section */
+        .cta-section {
+            text-align: center;
+            padding: 3rem 2rem;
+            background: #f8f8f8;
+        }
+
+        .cta-button {
+            display: inline-block;
+            background: black;
+            color: white;
+            padding: 1rem 2rem;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: background 0.3s ease;
+        }
+
+        .cta-button:hover {
+            background: grey;
+        }
+
         /* Footer */
         .footer {
             background-color: #f1f1f1;
@@ -409,6 +432,12 @@
                 </ul>
             </div>
 
+            <section class="cta-section">
+                <h2>Are you a Designer?</h2>
+                <p>Request to be notified when Tapestral is officaly launched!</p>
+                <a href="designer-access.html" class="cta-button">Stay Informed</a>
+            </section>
+
             <h2>How Vendors Benefit</h2>
             <p>
                 Vendors don’t have to run another storefront or manage new systems.
@@ -426,6 +455,12 @@
                     <li>Receiving and recording vendor order acknowledgements</li>
                 </ul>
             </div>
+
+            <section class="cta-section">
+                <h2>Are you a Vendor?</h2>
+                <p>Jump in and start hosting your pieces</p>
+                <a href="become-a-vendor.html" class="cta-button">Become a Vendor</a>
+            </section>
 
             <h2>Our Role</h2>
             <p>
